--- a/src/main.html
+++ b/src/main.html
@@ -37,9 +37,7 @@
         </style>
     </head>
     <body>
-        <div id="out">
-            <script type="text/javascript" src="start.js"></script>
-        </div>
+        <div id="out"></div>
         <input id="in" tabindex="0"/>
     </body>
     <script type="text/javascript" src="http://yui.yahooapis.com/combo?3.5.0/build/yui/yui-min.js"></script>
